tests/myTests/parserTests/fail/test2.c
#include "Test[2] -> Expected: Fail"
#include "Tests: Include with EOF"
#include